--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
 
-<div class="container mobile tab">
+<div class="container mobile tab smalll">
 <h1 class="heading">Love Calculator</h1>
 <!--<div class="all">
   <div class="male">
