--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
       </script>-->
 
       <!-- jQuery library -->
+    <!--  <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">   </script>
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">   </script>
 
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">   </script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">   </script>-->
        <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,18 +50,19 @@
 </div>-->
 <form id="forum" class="all" >
     <label class="first" for="name" > Your Name</label>
-        <input type="text" id="name" name="name"  placeholder="Your name"  required>
+        <input type="text" id="name" name="name"  placeholder="Your name"  >
         <h5 id="youcheck" style="color: red;">Your name required</h5>
 
 <br>
     <label class="second" for="mail" > Partner Name</label>
-      <input type="text" id="mail" name="mail" placeholder="Your Partner name"  required>
-      <h5 id="partnercheck" style="color: red;">Your partner name required</h5>
+      <input type="text" id="mail" name="mail" placeholder="Your Partner name"  >
+    <h5 id="partnercheck" style="color: red;">Your partner name required</h5>
 <br>
-      <input class="btn-submit" type="submit" value="Submit">
+      <input id="btn-submit" type="submit" value="Submit">
 
 </form>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 <script type="text/javascript" src="game.js">
 
 </script>
