--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
     <label class="first" for="name" > Your Name</label>
         <input type="text" id="name" name="name"  placeholder="Your name"  >
         <h5 id="youcheck" style="color: red;">Your name required</h5>
+        <h5 id="alphacheck1" style="color:red;">Enter Alphabets only..!!!</h5>
 
 <br>
     <label class="second" for="mail" > Partner Name</label>
       <input type="text" id="mail" name="mail" placeholder="Your Partner name"  >
     <h5 id="partnercheck" style="color: red;">Your partner name required</h5>
+    <h5 id="alphacheck2" style="color:red;">Enter Alphabets only..!!!</h5>
 <br>
       <input id="btn-submit" type="submit" value="Submit">
 
