--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
 
-<div class="container mobile tab smalll">
+<div class="container lap mobile tab smalll">
 <h1 class="heading">Love Calculator</h1>
 <!--<div class="all">
   <div class="male">
