--- a/index.html
+++ b/index.html
@@ -5,21 +5,6 @@
      <script src="https://kit.fontawesome.com/ed67dca9e6.js" crossorigin="anonymous"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <title> 💖 Love Calculator </title>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-    </script>
-      <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js">
-      </script>-->
-
-      <!-- jQuery library -->
-    <!--  <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">   </script>
-
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">   </script>
-
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">   </script>-->
        <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,15 +35,13 @@
 </div>-->
 <form id="forum" class="all" >
     <label class="first" for="name" > Your Name</label>
-        <input type="text" id="name" name="name"  placeholder="Your name"  >
+        <input type="text" id="name" name="name"  placeholder="Your name"  onkeypress="nospace()">
         <h5 id="youcheck" style="color: red;">Your name required</h5>
-        <h5 id="alphacheck1" style="color:red;">Enter Alphabets only..!!!</h5>
 
 <br>
     <label class="second" for="mail" > Partner Name</label>
-      <input type="text" id="mail" name="mail" placeholder="Your Partner name"  >
+      <input type="text" id="mail" name="mail" placeholder="Your Partner name"  onkeypress="nospace()">
     <h5 id="partnercheck" style="color: red;">Your partner name required</h5>
-    <h5 id="alphacheck2" style="color:red;">Enter Alphabets only..!!!</h5>
 <br>
       <input id="btn-submit" type="submit" value="Submit">
 
